delicious food section has added

--- a/index.html
+++ b/index.html
@@ -551,8 +551,179 @@
         <!-- -----------------Foodieland in Instagram section starts here---------------- -->
 
         <!-------------------Delicious recipe area starts here-------------------->
-        <section>
-          <h1 class="h1">Try this delicious recipe <br> to make your day</h1>
+        <section class="py-5">
+          <div class="container">
+            <div class="d-flex justify-content-between">
+              <h1 class="section-title">Try this delicious recipe <br> to make your day</h1>
+              <p class="mt-4">Looking for an exciting recipe! Not only filling but also satisfying. You can also spice up your meal.<br> Taste our new recipes.</p>
+            </div>
+            <!-- ---------------Delicious post section starts here--------------- -->
+            <section>
+              <div class="row row-cols-1 row-cols-md-4 g-4">
+                <!-- first column -->
+                <div class="col">
+                  <div class="card h-100 py-3 border-0 rounded-5">
+                    <img class="react-icon" src="images/red-heart.png" alt="">
+                    <img src="images/delicious-recepies/recipe-1.png" class="card-img-top p-3" alt="...">
+                    <div class="card-body">
+                        <h5 class="blog-title">Big and Juicy Wagyu Beef <br> Cheeseburger</h5>
+                        <div class="d-flex pt-3">
+                            <div class=" py-1 me-4 rounded-pill">
+                              <img src="images/Timer.png" alt="">
+                              <span>30 Minutes</span>
+                            </div>
+                            <div class="py-1 me-4 rounded-pill">
+                              <img src="images/ForkKnife.png" alt="">
+                              <span>Chicken</span>
+                            </div>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- second column -->
+                <div class="col">
+                  <div class="card h-100 py-3 border-0 rounded-5">
+                    <img class="react-icon" src="images/heart.png" alt="">
+                    <img src="images/delicious-recepies/recipe-2.png" class="card-img-top p-3" alt="...">
+                    <div class="card-body">
+                      <h5 class="blog-title">Fresh Lime Roasted Salmon with <br> Ginger Sauce</h5>
+                      <div class="d-flex pt-3">
+                        <div class=" py-1 me-4 rounded-pill">
+                          <img src="images/Timer.png" alt="">
+                          <span>30 Minutes</span>
+                        </div>
+                        <div class="py-1 me-4 rounded-pill">
+                          <img src="images/ForkKnife.png" alt="">
+                          <span>Chicken</span>
+                        </div>
+                    </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- third colulmn -->
+                <div class="col">
+                  <div class="card h-100 py-3 border-0 rounded-5">
+                    <img class="react-icon" src="images/red-heart.png" alt="">
+                    <img src="images/delicious-recepies/recipe-3.png" class="card-img-top p-3" alt="...">
+                    <div class="card-body">
+                      <h5 class="blog-title">Strawberry Oatmeal Pancake <br> with Honey Syrup</h5>
+                      <div class="d-flex pt-3">
+                        <div class=" py-1 me-4 rounded-pill">
+                          <img src="images/Timer.png" alt="">
+                          <span>30 Minutes</span>
+                        </div>
+                        <div class="py-1 me-4 rounded-pill">
+                          <img src="images/ForkKnife.png" alt="">
+                          <span>Chicken</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- fourth column -->
+                <div class="col">
+                    <div class="card h-100 py-3 border-0 rounded-5">
+                      <img class="react-icon" src="images/heart.png" alt="">
+                      <img src="images/delicious-recepies/recipe-4.png" class="card-img-top p-3" alt="...">
+                      <div class="card-body">
+                        <h5 class="blog-title">Fresh and Healthy Mixed Mayonnaise Salad</h5>
+                        <div class="d-flex pt-3">
+                          <div class=" py-1 me-4 rounded-pill">
+                            <img src="images/Timer.png" alt="">
+                            <span>30 Minutes</span>
+                          </div>
+                          <div class="py-1 me-4 rounded-pill">
+                            <img src="images/ForkKnife.png" alt="">
+                            <span>Chicken</span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <!-- fifth colulmn -->
+                <div class="col">
+                    <div class="card h-100 py-3 border-0 rounded-5">
+                      <img class="react-icon" src="images/red-heart.png" alt="">
+                      <img src="images/delicious-recepies/recipe-5.png" class="card-img-top p-3" alt="...">
+                      <div class="card-body">
+                        <h5 class="blog-title">Chicken Meatballs with Cream <br> Cheese</h5>
+                        <div class="d-flex pt-3">
+                          <div class="me-4 rounded-pill">
+                            <img src="images/Timer.png" alt="">
+                            <span>30 Minutes</span>
+                          </div>
+                          <div class="me-4 rounded-pill">
+                            <img src="images/ForkKnife.png" alt="">
+                            <span>Chicken</span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <!-- sixth column -->
+                <div class="col">
+                    <div class="card h-100 py-3 border-0 rounded-5">
+                      <img class="react-icon" src="images/heart.png" alt="">
+                      <img src="images/delicious-recepies/recipe-6.png" class="card-img-top p-3" alt="...">
+                      <div class="card-body">
+                        <h5 class="blog-title">Fruity Pancake with Orange & <br> Blueberry</h5>
+                        <div class="d-flex pt-3">
+                          <div class=" py-1 me-4 rounded-pill">
+                            <img src="images/Timer.png" alt="">
+                            <span>30 Minutes</span>
+                          </div>
+                          <div class="py-1 me-4 rounded-pill">
+                            <img src="images/ForkKnife.png" alt="">
+                            <span>Chicken</span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <!-- seventh column-->
+                <div class="col">
+                    <div class="card h-100 py-3 border-0 rounded-5">
+                      <img class="react-icon" src="images/heart.png" alt="">
+                      <img src="images/delicious-recepies/recipe-7.png" class="card-img-top p-3" alt="...">
+                      <div class="card-body">
+                        <h5 class="blog-title">The Best Easy One Pot Chicken <br> and Rice</h5>
+                        <div class="d-flex pt-3">
+                          <div class=" py-1 me-4 rounded-pill">
+                            <img src="images/Timer.png" alt="">
+                            <span>30 Minutes</span>
+                          </div>
+                          <div class="py-1 me-4 rounded-pill">
+                            <img src="images/ForkKnife.png" alt="">
+                            <span>Chicken</span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <!-- Eight column -->
+                <div class="col">
+                    <div class="card h-100 py-3 border-0 rounded-5">
+                      <img class="react-icon" src="images/heart.png" alt="">
+                      <img src="images/delicious-recepies/recipe-8.png" class="card-img-top p-3" alt="...">
+                      <div class="card-body">
+                        <h5 class="blog-title">The Creamiest Creamy Chicken<br> and Bacon Pasta</h5>
+                        <div class="d-flex pt-3">
+                          <div class=" py-1 me-4 rounded-pill">
+                            <img src="images/Timer.png" alt="">
+                            <span>30 Minutes</span>
+                          </div>
+                          <div class="py-1 me-4 rounded-pill">
+                            <img src="images/ForkKnife.png" alt="">
+                            <span>Chicken</span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+              </div>
+            </section>
+            <!-- ---------------Delicious post section starts here--------------- -->
+          </div>
         </section>
         <!-------------------Delicious recipe area starts here-------------------->
 
