newsletter has added

--- a/index.html
+++ b/index.html
@@ -551,14 +551,14 @@
         <!-- -----------------Foodieland in Instagram section starts here---------------- -->
 
         <!-------------------Delicious recipe area starts here-------------------->
-        <section class="py-5">
+        <section class="py-5 mt-5">
           <div class="container">
             <div class="d-flex justify-content-between">
               <h1 class="section-title">Try this delicious recipe <br> to make your day</h1>
               <p class="mt-4">Looking for an exciting recipe! Not only filling but also satisfying. You can also spice up your meal.<br> Taste our new recipes.</p>
             </div>
             <!-- ---------------Delicious post section starts here--------------- -->
-            <section>
+            <section class="py-4">
               <div class="row row-cols-1 row-cols-md-4 g-4">
                 <!-- first column -->
                 <div class="col">
@@ -727,6 +727,20 @@
         </section>
         <!-------------------Delicious recipe area starts here-------------------->
 
+        <!-- ---------------Newletter section starts here--------------- -->
+        <section class="container text-center newsletter py-5 rounded-5 mb-4">
+            <h1 class="section-title">Deliciousness to your inbox</h1>
+            <p class="custom-text py-3">To get more updates about our new recipies please subscribe our newsletter. <br> You will get a email in every week.</p>
+            <div action="" class="w-50 mx-auto">
+              <input class="border-0 py-3 rounded-4 w-50" type="text">
+              <a class="btn btn-dark subscribe-btn position-relative rounded-3" href="#">Subscribe</a>
+            </div>
+            <div class="bg-image">
+              <img class="bg-image-1 rounded-5" src="images/kisspng-salad-salad-fresh-food-healthylife-vegetables-vegetarian.png" alt="">
+              <img class="bg-image-2 rounded-5" src="images/Photo.png" alt="">
+            </div>
+          </section>
+        <!-- ---------------Newletter section starts here--------------- -->
     </main>
     <!-- --------------Main section ends here--------------- -->
 
