--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             <div class="d-flex justify-content-between pt-5 my-5">
                                 <div class="d-flex">
                                     <div class="me-3">
-                                        <img src="images/profile.png" alt="">
+                                        <img src="images/john-smith.png" alt="">
                                     </div>
                                     <div>
                                         <h5 class="mb-0">John Smith</h5>
@@ -555,7 +555,7 @@
           <div class="container">
             <div class="d-flex justify-content-between">
               <h1 class="section-title">Try this delicious recipe <br> to make your day</h1>
-              <p class="mt-4">Looking for an exciting recipe! Not only filling but also satisfying. You can also spice up your meal.<br> Taste our new recipes.</p>
+              <p class="mt-4 custom-text">Looking for an exciting recipe! Not only filling but also satisfying. You can also spice up your meal.<br> Taste our new recipes.</p>
             </div>
             <!-- ---------------Delicious post section starts here--------------- -->
             <section class="py-4">
@@ -732,7 +732,7 @@
             <h1 class="section-title">Deliciousness to your inbox</h1>
             <p class="custom-text py-3">To get more updates about our new recipies please subscribe our newsletter. <br> You will get a email in every week.</p>
             <div action="" class="w-50 mx-auto">
-              <input class="border-0 py-3 rounded-4 w-50" type="text">
+              <input class="border-0 py-3 px-3 rounded-4 w-50 custom-text" type="text" placeholder="Your email address...">
               <a class="btn btn-dark subscribe-btn position-relative rounded-3" href="#">Subscribe</a>
             </div>
             <div class="bg-image">
@@ -744,6 +744,48 @@
     </main>
     <!-- --------------Main section ends here--------------- -->
 
+    <!-- ---------------Footer section starts here-------------- -->
+    <footer class="mt-5 py-5">
+      <section class="container">
+        <div class="row">
+          <!-------------------- footer logo area starts here --------------------->
+          <div class="col-lg-6 col-md-6">
+            <img class="mb-3" src="images/logo.png" alt="">
+            <p class="custom-text fw-normal">Eat fresh food and stay healthy. Good health can make us happy.</p>
+          </div>
+          <!-------------------- footer logo area ends here --------------------->
+
+          <!--------------------footer menu area starts here---------------------->
+          <div class="col-lg-6 col-md-6 d-flex justify-content-end px-0 ">
+            <ul class="nav">
+              <li>
+                <a class="nav-link text-dark fw-semibold" href="#">Recepies</a>
+              </li>
+              <li>
+                <a class="nav-link text-dark fw-semibold" href="">Blog</a>
+              </li>
+              <li>
+                <a class="nav-link text-dark fw-semibold" href="#">Contact</a>
+              </li>
+              <li>
+                <a class="nav-link text-dark fw-semibold" href="#">About us</a>
+              </li>
+            </ul>
+          </div>
+          <!--------------------footer menu area starts here---------------------->
+        </div>
+
+        <!------------------copyrights area starts here------------------->
+        <div class="row">
+          <div class="col-md-8 col-lg-8 d-flex justify-content-end">
+            <p>&copy;2022 Flowbase. Powered by <a class="copyright-credit" href="#">webflow</a></p>
+          </div>
+          <div class="col-md-4 col-lg-4"></div>
+        </div>
+        <!------------------copyrights area starts here------------------->
+      </section>
+    </footer>
+    <!-- ---------------Footer section starts here-------------- -->
 
     <!-- -----------bootstrap cdn s link starts here----------- -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
