--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
     <!-- --------------Main section ends here--------------- -->
 
     <!-- ---------------Footer section starts here-------------- -->
-    <footer class="mt-5 py-5">
+    <footer class="mt-5 pt-5">
       <section class="container">
         <div class="row">
           <!-------------------- footer logo area starts here --------------------->
@@ -776,11 +776,15 @@
         </div>
 
         <!------------------copyrights area starts here------------------->
-        <div class="row">
+        <div class="row pt-5 pb-2">
           <div class="col-md-8 col-lg-8 d-flex justify-content-end">
             <p>&copy;2022 Flowbase. Powered by <a class="copyright-credit" href="#">webflow</a></p>
           </div>
-          <div class="col-md-4 col-lg-4"></div>
+          <div class="col-md-4 col-lg-4 d-flex justify-content-end footer-social-icon">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+          </div>
         </div>
         <!------------------copyrights area starts here------------------->
       </section>
