mobile responsive code added

--- a/index.html
+++ b/index.html
@@ -50,23 +50,23 @@
                             <a class="nav-link text-dark" href="#">About Us</a>
                         </li>
                     </ul>
-                    <ul class="navbar-nav mt-3">
-                        <li class="nav-item me-3">
-                            <a href="#" class="nav-link text-dark">
+                    <div class="d-flex justify-content-center mt-3">
+                        <li class="list-unstyled me-4">
+                            <a href="#" class=" text-dark">
                                 <i class="fa-brands fa-facebook-f"></i>
                             </a>
                         </li>
-                        <li class="nav-item me-3">
-                            <a href="#" class="nav-link text-dark">
+                        <li class="list-unstyled me-4">
+                            <a href="#" class="text-dark">
                                 <i class="fa-brands fa-twitter"></i>
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link text-dark">
+                        <li class="list-unstyled">
+                            <a href="#" class=" text-dark">
                                 <i class="fa-brands fa-instagram"></i>
                             </a>
                         </li>
-                    </ul>
+                      </div>
                 </div>
             </div>
         </nav>
@@ -77,13 +77,13 @@
         <section>
             <div class="container py-5">
                 <div class="row">
-                    <div class="col-md-6 header-text d-flex justify-content-center pe-0">
+                    <div class="col-md-6 d-flex justify-content-center pe-0 header-content">
                         <div>
                             <div class="fw-semibold px-3 py-2 mt-5 my-3 rounded-pill top-left-badge">
                                 <img class="me-2" src="images/book.png" alt="">
-                                <span class="">Hot Recipes</span>
+                                <span>Hot Recipes</span>
                             </div>
-                            <h1 class="py-3">Spicy delicious <br> chicken wings</h1>
+                            <h1 class="header-title py-3">Spicy delicious <br> chicken wings</h1>
                             <p>The chicken recipe will be so delicious. <br>And there are many recipies available in our restaurant</p>
                             <div class="d-flex">
                                 <div class="px-3 py-1 me-4 rounded-pill header-btn">
@@ -95,7 +95,7 @@
                                     <span>Chicken</span>
                                 </div>
                             </div>
-                            <div class="d-flex justify-content-between pt-5 my-5">
+                            <div class="d-flex justify-content-between pt-4 my-5">
                                 <div class="d-flex">
                                     <div class="me-3">
                                         <img src="images/john-smith.png" alt="">
@@ -106,7 +106,7 @@
                                     </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-dark px-4 py-3" href="#">
+                                    <a class="btn btn-dark px-4 py-3 recipe-button" href="#">
                                         View Recipes
                                         <i class="fa-solid fa-circle-play ms-1"></i>
                                     </a>
@@ -114,9 +114,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 ps-0 header-left-bg">
-                        <div class="position-absolute mt-5 top-right-badge">
-                            <img src="images/Badge.png" alt="">
+                    <div class="col-md-6 ps-0">
+                        <div class="position-absolute mt-5 header-right-badge">
+                            <img class="header-thumb-badge" src="images/Badge.png" alt="">
                         </div>
                         <img class="header-image img-fluid" src="images/header-banner.png" alt="">
                     </div>
@@ -135,28 +135,28 @@
             <h2 class="mt-0">Categories</h2>
             <a class="mt-1 py-2 px-3 rounded text-decoration-none text-dark fw-semibold categories" href="#">View All Categories</a>
         </section>
-        <section class="py-5 my-5 d-flex justify-content-between flex-wrap">
-            <div class="rounded-5 px-4 breakfast">
+        <section class="py-5 my-5 row g-2">
+            <div class="rounded-5 px-4 breakfast col-lg-2">
                 <img src="images/categories/breakfast.png" alt="">
                 <h6 class="mt-5 ps-3">Breakfast</h6>
             </div>
-            <div class="rounded-5 vegan">
+            <div class="rounded-5 vegan col-lg-2">
                 <img class="ps-3" src="images/categories/vegan.png" alt="">
                 <h6 class="mt-1 ps-5">Vegan</h6>
             </div>
-            <div class="rounded-5 px-4 meat">
+            <div class="rounded-5 px-4 col-lg-2 meat">
                 <img src="images/categories/meat.png" alt="">
                 <h6 class="mt-5 ps-4">Meat</h6>
             </div>
-            <div class="rounded-5 px-4 dessart">
+            <div class="rounded-5 px-4 col-lg-2 dessart">
                 <img src="images/categories/dessart.png" alt="">
                 <h6 class="mt-5 ps-4">Dessart</h6>
             </div>
-            <div class="rounded-5 px-4 lunch">
+            <div class="rounded-5 px-4 col-lg-2 lunch">
                 <img src="images/categories/lunch.png" alt="">
                 <h6 class="mt-5 ps-4">Lunch</h6>
             </div>
-            <div class="rounded-5 px-4 chocholate">
+            <div class="rounded-5 px-4 col-lg-2 chocholate">
                 <img src="images/categories/chocholate.png" alt="">
                 <h6 class="mt-5 ps-2">Chocholate</h6>
             </div>
