last error has fixed

--- a/index.html
+++ b/index.html
@@ -136,34 +136,36 @@
             <a class="mt-1 py-2 px-3 rounded text-decoration-none text-dark fw-semibold categories-button" href="#">View All Categories</a>
           </section>
         <!-- --------------------Categories Product area starts here--------------------- -->
-          <section class="categories d-flex justify-content-between my-5">
-            <div class="category px-5 py-4 rounded-5 breakfast">
-              <img src="images/categories/breakfast.png" alt="">
-              <h6 class="text-center mt-5">Breakfast</h6>
-            </div>
-            <div class="category px-5 py-4 rounded-5 vegan">
-              <img src="images/categories/vegan.png" alt="">
-              <h6 class="text-center mt-5">Vegan</h6>
-            </div>
-            <div class="category px-5 py-4 rounded-5 meat">
-              <img src="images/categories/meat.png" alt="">
-              <h6 class="text-center mt-5">Meat</h6>
-            </div>
-            <div class="category px-5 py-4 rounded-5 dessart">
-              <img src="images/categories/dessart.png" alt="">
-              <h6 class="text-center mt-5">Dessart</h6>
-            </div>
-            <div class="category px-5 py-4 rounded-5 lunch">
-              <img src="images/categories/lunch.png" alt="">
-              <h6 class="text-center mt-5">Lunch</h6>
-            </div>
-            <div class="category px-5 py-4 rounded-5 chocholate">
-              <img src="images/categories/chocholate.png" alt="">
-              <h6 class="text-center mt-5">Chocholate</h6>
-            </div>
+          <section class="categories-area">
+            <section class="d-flex justify-content-between my-5">
+              <div class=" px-5 py-4 my-5 rounded-5 breakfast">
+                <img src="images/categories/breakfast.png" alt="">
+                <h6 class="text-center mt-5">Breakfast</h6>
+              </div>
+              <div class=" px-5 py-4 my-5 rounded-5 vegan">
+                <img src="images/categories/vegan.png" alt="">
+                <h6 class="text-center mt-5">Vegan</h6>
+              </div>
+              <div class=" px-5 py-4 my-5 rounded-5 meat">
+                <img src="images/categories/meat.png" alt="">
+                <h6 class="text-center mt-5">Meat</h6>
+              </div>
+              <div class=" px-5 py-4 my-5 rounded-5 dessart">
+                <img src="images/categories/dessart.png" alt="">
+                <h6 class="text-center mt-5">Dessart</h6>
+              </div>
+              <div class=" px-5 py-4 my-5 rounded-5 lunch">
+                <img src="images/categories/lunch.png" alt="">
+                <h6 class="text-center mt-5">Lunch</h6>
+              </div>
+              <!-- <div class=" px-5 py-4 my-5 rounded-5 chocholate">
+                <img src="images/categories/chocholate.png" alt="">
+                <h6 class="text-center mt-5">Chocholate</h6>
+              </div> -->
+            </section>
           </section>
         </section>
-        <!-- --------------Categories section starts here------------- -->
+        <!-- --------------Categories section ends here------------- -->
 
         <!-- -----------------Simple and Tasty recipes area starts here---------------- -->
 
@@ -735,7 +737,7 @@
         <!-------------------Delicious recipe area starts here-------------------->
 
         <!-- ---------------Newletter section starts here--------------- -->
-        <section class="container text-center newsletter py-5 rounded-5 mb-4">
+        <!-- <section class="container text-center newsletter py-5 rounded-5 mb-4">
             <h1 class="section-title">Deliciousness to your inbox</h1>
             <p class="custom-text py-3">To get more updates about our new recipes please subscribe our newsletter. <br> You will get a email in every week.</p>
             <div class="w-75 mx-auto">
@@ -746,7 +748,7 @@
               <img class="bg-image-1 rounded-5" src="images/kisspng-salad-salad-fresh-food-healthylife-vegetables-vegetarian.png" alt="">
               <img class="bg-image-2 rounded-5" src="images/Photo.png" alt="">
             </div>
-          </section>
+          </section> -->
         <!-- ---------------Newletter section starts here--------------- -->
     </main>
     <!-- --------------Main section ends here--------------- -->
@@ -781,7 +783,6 @@
           </div>
           <!--------------------footer menu area starts here---------------------->
         </div>
-
         <!------------------copyrights area starts here------------------->
         <div class="row pt-5 pb-2">
           <div class="col-md-8 col-lg-8 d-flex justify-content-end">
@@ -796,7 +797,7 @@
         <!------------------copyrights area starts here------------------->
       </section>
     </footer>
-    <!-- ---------------Footer section starts here-------------- -->
+    <!-- ---------------Footer section ends here-------------- -->
 
     <!-- -----------bootstrap cdn s link starts here----------- -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
